Update and rename te.txt to tedicross.service

--- a/tedicross.service
+++ b/tedicross.service
@@ -8,8 +8,8 @@ Restart=always
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=tedicross
-User=tedicross
-Group=tedicross
+User=root
+Group=root
 
 [Install]
 WantedBy=multi-user.target
