--- a/tedicross.service
+++ b/tedicross.service
@@ -3,13 +3,15 @@ Description=Ted
 
 [Service]
 ExecStart=/usr/bin/npm start
-WorkingDirectory=/home/tedicross/TediCross
+WorkingDirectory=/root/TediCross/
 Restart=always
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=tedicross
 User=root
 Group=root
+Environment=TELEGRAM_BOT_TOKEN=1277361688:AAHQ5jB7FIoI7YfkSaVxlfJ-_0tHr8TxImg
+Environment=DISCORD_BOT_TOKEN=NzM1ODMxNjExNzU2NzczMzg2.XxmXdA.BZPzl7tuis5u5rgkz_F2-6iYnvA
 
 [Install]
 WantedBy=multi-user.target
